--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:oracle:thin:@//192.168.34.160:1751/UROSDB
+spring.datasource.url=jdbc:oracle:thin:@//localhost/db
 spring.datasource.username=xxxxxx
 spring.datasource.password=xxxxxx
 spring.jpa.hibernate.ddl-auto=create
